# acapy-afj-interop

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
afj/: Dockerfile  index.ts  package-lock.json  package.json
tests/: conftest.py  test_json_ld_creds.py  test_oob_didex.py
wrapper/: __init__.py
