[project]
name = "acapy-afj-interop"
version = "0.1.0"
description = "Interop testing for ACA-Py and Credo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonrpc-api-proxy-client @ git+https://github.com/Indicio-tech/json-rpc-api-proxy.git@d2c4d997e86b738161830578a87a3a30f741a5d4#subdirectory=clients/python",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "controller @ git+https://github.com/Indicio-tech/acapy-minimal-example.git@6fbba62e4433c5a5eec445e88e1dc6b4bedc3730",
    "base58>=2.1.1",
]
